# HOSHI_WorkFlow

./: .gitignore  .pre-commit-config.yaml  HOSHI_Reader.py  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  example_HoshiReader.ipynb  example_NameConvention.ipynb  example_hoshi_reader.ipynb  example_make_initial_model.ipynb  example_name_convention.ipynb  examples_initialComposition.ipynb  examples_initial_composition.ipynb
examples/example_data/: ZSOLAR.DAT.KOBAYASHI
examples/example_model/fake_model/: copy_HOSHI.sh  copy_HOSHI.sh~  evol  mass153J1.txt  nconv.sh  setdir.sh  setdir.sh~
examples/example_model/fake_model/accretion/: initial_relaxation.gp  initial_relaxation.gp~  plot.gp  plot.gp~
examples/example_model/fake_model/anime/: anime.sh~
examples/example_model/fake_model/cxdata/: .parsed_cxdat_02468.txt.swp  parsed_cxdat_02468.txt
examples/examples_hoshi_reader/: example_hr_cxdata.ipynb  example_hr_history.ipynb  example_hr_profile.ipynb
scripts/initial_composition/: FileNameConvention.py  README_FNC_sh.md  example_NameConvention.ipynb  examples_initialComposition.ipynb  initial_composition.py  setup.py  yields_table_2013_nomoto.tsv
scripts/make_initial_models/: MakeInitialModels.py  mk_ini_models.py  setup.py
src/HOSHI_Reader/: HOSHI_Reader.py  HoshiReader.py  example_HoshiReader.ipynb  setup.py
src/HOSHI_reader/: HoshiReader.py  __init__.py  example_HoshiReader.ipynb
src/file_name_convention/: FileNameConvention.py  __init__.py
src/hoshi_workflow/: __init__.py
src/hoshi_workflow/HOSHI_reader/: HoshiReader.py  __init__.py
src/hoshi_workflow/file_name_convention/: FileNameConvention.sh  __init__.py
src/hoshi_workflow/hoshi_reader/: __init__.py  dev.ipynb  hoshi_reader.py
src/hoshi_workflow/make_initial_models/: __init__.py  make_initial_models.py
src/initial_composition/: M09F9d00_Y09F3d08  README.md  YEILD.DAT.NOMOTO2013.15M  __init__.py  example_NameConvention.ipynb  initial_composition.py
src/make_initial_models/: MakeInitialModels.py  __init__.py  make_initial_models.py
tests/: test_basic_imports.py  test_hoshi_reader.py
(+183 files in other folders)
